--- a/content/projects/C2048.md
+++ b/content/projects/C2048.md
@@ -7,7 +7,7 @@ tech:
   - C++
   - Object-Oriented
 showInProjects: true
-image: './img.png'
+image: './2048.jpg'
 ---
 
 Created a clone of the hit 2048 game from scratch in the context of my curriculum at Centrale Lyon
